# repo-init

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.json
cmake/: config.hpp.in  information.hpp.in
cmake/modules/: AutoBuildNumber.cmake  Colorize.cmake  CompilerFlags.cmake  CompilerOptions.cmake  FindASan.cmake  FindMSan.cmake  FindSanitizers.cmake  FindTSan.cmake  FindUBSan.cmake  ParseConfigs.cmake  sanitize-helpers.cmake
include/handlers/: logger.hpp
scripts/: ldd-copy-dependencies.sh
src/: main.cpp
src/handlers/: CMakeLists.txt  logger.cpp
