CMAKE_MINIMUM_REQUIRED(VERSION 3.19)

PROJECT(app LANGUAGES CXX)
SET(PROJECT_VERSION 1.0.0.0)
SET(PROJECT_DESCRIPTION "Project description.")

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/build/Debug/lib/static)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/build/Debug/lib/shared)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/build/Debug/bin)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/build/Release/lib/static)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/build/Release/lib/shared)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/build/Release/bin)

SET(CMAKE_GENERATOR "Unix Makefiles")
SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_DEBUG_POSTFIX d)

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules)
INCLUDE(Colorize)
INCLUDE(CompilerOptions)
INCLUDE(CompilerFlags)
INCLUDE(ParseConfigs)

CONFIGURE_FILE(
    ${CMAKE_CURRENT_SOURCE_DIR}/cmake/information.hpp.in 
    ${CMAKE_CURRENT_SOURCE_DIR}/include/information.hpp)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/3rdparty)

ADD_EXECUTABLE(${PROJECT_NAME} 
    ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME}
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/include
        ${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/boost/libs/program_options/include/boost)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
    boost_program_options)

INSTALL(TARGETS 
    ${PROJECT_NAME}
    boost_program_options
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib)

STRING(TIMESTAMP BUILD_TIME "%Y-%m-%d")

SET(CPACK_PACKAGE_NAME "${PROJECT_NAME}-v${PROJECT_VERSION}-${BUILD_TIME}")
SET(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}")
SET(CPACK_PACKAGING_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
SET(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
SET(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
SET(CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION_PATCH})
SET(CPACK_PACKAGE_DESCRIPTION ${PROJECT_DESCRIPTION})
SET(CPACK_DEBIAN_PACKAGE_DEPENDS "debsums")
SET(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_CURRENT_SOURCE_DIR}/scripts/dpkg/postinst")
SET(CPACK_GENERATOR "DEB")
SET(CPACK_PACKAGE_INSTALL_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
SET(CPACK_PACKAGE_CHECKSUM "MD5")
SET(CPACK_PACKAGE_VENDOR "Company name")
SET(CPACK_PACKAGE_CONTACT "email")
SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Your name <${CPACK_PACKAGE_CONTACT}>")

INCLUDE(CPack)
